--- a/index.html
+++ b/index.html
@@ -85,6 +85,6 @@
             <p>&copy; 2024 Farhan Ahmed. All Rights Reserved.</p>
         </div>
     </footer>
-
+<script src="js/script.js"></script>
 </body>
 </html>
